--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,6 @@ iOSInjectionProject/
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+*.xcconfig
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcode,cocoapods
